Basic launcher rotation implemented
1. Launcher vert & horizontal rotation implemented
2. Door & top hatch animations added
3. Terrains added
4. DOTween imported

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+.idea/.idea.HIMARS/.idea/vcs.xml
+.idea/.idea.HIMARS/.idea/indexLayout.xml
+.idea/.idea.HIMARS/.idea/encodings.xml
