--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 .idea/.idea.HIMARS/.idea/vcs.xml
 .idea/.idea.HIMARS/.idea/indexLayout.xml
 .idea/.idea.HIMARS/.idea/encodings.xml
+Assets/Plugins/Zenject/Source/Zenject.csproj.meta
